syntax="proto3";

service AegisService {
    rpc GenerateTokens (GenerateTokensRequest) returns (GenerateTokensResponse);
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}


message GenerateTokensRequest{
    string user_uid = 1;
    int32 user_role = 2;
}
message GenerateTokensResponse{
    string access_token = 1;
    string refresh_token = 2;
}
message RefreshTokenRequest{
    string refresh_token = 1;
}
message RefreshTokenResponse{
    string access_token = 1;
}
message ValidateTokenRequest{
    string access_token = 1;
}
message ValidateTokenResponse{
    string user_uid = 1;
    int32 user_role = 2;
}